--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rebilly-js",
+  "name": "rebilly-js-token",
   "version": "0.1.0",
   "description": "Rebilly payment token library",
   "main": "./dist/rebilly.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Rebilly/rebilly-js.git"
+    "url": "https://github.com/Rebilly/rebilly-js-token.git"
   },
   "keywords": [
     "rebilly",
@@ -22,9 +22,9 @@
   "author": "Andrei Moldoveanu",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Rebilly/rebilly-js/issues"
+    "url": "https://github.com/Rebilly/rebilly-js-token/issues"
   },
-  "homepage": "https://github.com/Rebilly/rebilly-js#readme",
+  "homepage": "https://github.com/Rebilly/rebilly-js-token#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -34,7 +34,7 @@
     "chai": "^4.1.2",
     "cross-env": "^5.0.5",
     "fingerprintjs2": "^1.5.1",
-    "mocha": "^3.5.3",
+    "mocha": "^4.0.0",
     "rimraf": "^2.6.2",
     "webpack": "^3.6.0",
     "xhr": "^2.4.0"
