--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "clean": "rimraf dist",
     "build:dev": "npm run clean && webpack --env=dev",
-    "test": "test"
+    "build:prod": "npm run clean && webpack --env=prod",
+    "prepublish": "npm run build:prod",
+    "test": "mocha --compilers js:babel-core/register --require babel-polyfill --colors ./test/spec.js",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -29,6 +32,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
