Update readme, add initial doc structure

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "payment",
     "card"
   ],
+  "files": [
+    "dist"
+  ],
   "author": "Andrei Moldoveanu",
   "license": "MIT",
   "bugs": {
