Add validation namespace to main export

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "npm run clean && webpack --env=dev",
     "build:prod": "npm run clean && webpack --env=prod",
     "prepublish": "npm run build:prod",
-    "test": "mocha --compilers js:babel-core/register --require babel-polyfill --colors ./test/spec.js",
+    "test": "mocha --compilers js:babel-core/register --require babel-polyfill --colors ./test/*.spec.js",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
