--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,5 +39,7 @@ markdown_extensions:
 pages:
   - Introduction: index.md
   - Getting Started: getting-started.md
+  - Validation Tools: validation-tools.md
+  - Common Errors: common-errors.md
   - License: license.md
 
