--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,4 @@
 {
-  "presets": ["es2015", "stage-2"],
-  "plugins": [
-    ["transform-runtime", {
-      "helpers": false,
-      "polyfill": false,
-      "regenerator": true
-    }]
-  ]
+  "presets": ["es2015", "stage-2"]
+
 }
