--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "rimraf": "^2.6.2",
     "webpack": "^3.6.0",
     "xhr": "^2.4.0"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.26.0"
   }
 }
