--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "fingerprintjs2": "^1.5.1",
     "mocha": "^4.0.0",
     "rimraf": "^2.6.2",
+    "sinon": "^6.1.5",
     "webpack": "^3.6.0",
     "xhr": "^2.4.0"
   },
